# ai-eng-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  challenge.ipynb  docker-compose.yml  langgraph.json  pyproject.toml
data/: customers.json
src/: api.py  generate_visualization.py  local_api.py  main.py
src/agents/: bouncer.py  greeter.py  guardrail.py  specialist.py
src/graph/: builder.py  config.py  routing.py  state.py  summarization.py
src/tools/: bouncer_tools.py  greeterTools.py  greeter_tools.py  specialist_tools.py
src/utils/: data.py  generate_visualization.py
static/: index.html
tests/: conftest.py
tests/agents/: test_greeter_agent.py
tests/graph/: test_routing.py
tests/integration/: conftest.py  test_agent_responses.py  test_edge_cases.py  test_full_conversation_flows.py  test_guardrail_effectiveness.py
tests/tools/: test_account_tools.py  test_greeter_tools.py  test_routing_tools.py
