[project]
name = "ai-eng-challenge"
version = "0.1.0"
description = "Greeter agent for DEUS Bank"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.128.5",
    "uvicorn>=0.30.0",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring real LLM calls (deselect with '-m \"not integration\"')",
]
timeout = 180

[tool.uv]
